<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#A70000" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:paddingTop="100dp" >

        <TextView
            android:id="@+id/header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="30dp"
            android:drawableLeft="@drawable/ic_launcher"
            android:text="@string/header"
            android:textColor="#FFFFFF"
            android:textSize="25dp" />

        <EditText
            android:id="@+id/money_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/money_amount_message"
            android:inputType="numberDecimal" >
        </EditText>

        <EditText
            android:id="@+id/persons_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/persons_amount_message"
            android:inputType="number" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="calculate"
            android:text="@string/button_calculate" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="clearForm"
            android:text="@string/clear_form" />
    </LinearLayout>

</ScrollView>